<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.1</version>
        <relativePath/>
        <!-- lookup parent from repository -->
    </parent>
    <groupId>com.fincity.saas</groupId>
    <artifactId>worker</artifactId>
    <version>1.0.0</version>
    <name>Worker</name>
    <description>Fincity SAAS worker server</description>
    <properties>
        <java.version>21</java.version>
        <spring-cloud.version>2024.0.0-RC1</spring-cloud.version>
        <nocode-kirun-version>3.7.1</nocode-kirun-version>
        <saas-commons-version>2.0.0</saas-commons-version>
        <saas-commons-jooq-version>2.0.0</saas-commons-jooq-version>
        <saas-commons-security-version>2.0.0</saas-commons-security-version>
        <saas-commons-mq-version>2.0.0</saas-commons-mq-version>
        <nocode-flatmap-util-version>1.3.0</nocode-flatmap-util-version>
        <spotless.version>2.40.0</spotless.version>
        <palantir-java.format.version>2.61.0</palantir-java.format.version>
        <mockito.version>5.10.0</mockito.version>
        <jooq.version>3.20.3</jooq.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>io.micrometer</groupId>
            <artifactId>micrometer-registry-prometheus</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-r2dbc</artifactId>
        </dependency>
        <dependency>
            <groupId>io.r2dbc</groupId>
            <artifactId>r2dbc-pool</artifactId>
        </dependency>
        <dependency>
            <groupId>io.asyncer</groupId>
            <artifactId>r2dbc-mysql</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-jdbc</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webflux</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-aop</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-starter-config</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
        </dependency>
        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-mysql</artifactId>
        </dependency>
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
        </dependency>
        <dependency>
            <groupId>io.projectreactor.netty</groupId>
            <artifactId>reactor-netty</artifactId>
        </dependency>
        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-resolver-dns-native-macos</artifactId>
            <classifier>osx-aarch_64</classifier>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jooq</groupId>
            <artifactId>jooq-codegen-maven</artifactId>
            <version>${jooq.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jooq</groupId>
            <artifactId>jooq</artifactId>
            <version>${jooq.version}</version>
        </dependency>
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-api</artifactId>
            <version>0.11.5</version>
        </dependency>
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-impl</artifactId>
            <version>0.11.5</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-jackson</artifactId>            <!-- or jjwt-gson if Gson is
			preferred -->
            <version>0.11.5</version>
            <scope>runtime</scope>
        </dependency>

        <!-- Fincity Dependencies -->
        <dependency>
            <groupId>com.fincity.nocode</groupId>
            <artifactId>kirun-java</artifactId>
            <version>${nocode-kirun-version}</version>
        </dependency>
        <dependency>
            <groupId>com.fincity.saas</groupId>
            <artifactId>commons</artifactId>
            <version>${saas-commons-version}</version>
        </dependency>
        <dependency>
            <groupId>com.fincity.saas</groupId>
            <artifactId>commons-mq</artifactId>
            <version>${saas-commons-mq-version}</version>
        </dependency>
        <dependency>
            <groupId>com.fincity.saas</groupId>
            <artifactId>commons-jooq</artifactId>
            <version>${saas-commons-jooq-version}</version>
        </dependency>
        <dependency>
            <groupId>com.fincity.saas</groupId>
            <artifactId>commons-security</artifactId>
            <version>${saas-commons-security-version}</version>
        </dependency>
        <dependency>
            <groupId>com.fincity.nocode</groupId>
            <artifactId>reactor-flatmap-util</artifactId>
            <version>${nocode-flatmap-util-version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-cache</artifactId>
        </dependency>
        <dependency>
            <groupId>com.github.ben-manes.caffeine</groupId>
            <artifactId>caffeine</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.projectreactor</groupId>
            <artifactId>reactor-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.projectreactor.tools</groupId>
            <artifactId>blockhound</artifactId>
            <version>1.0.6.RELEASE</version>
        </dependency>
        <dependency>
            <groupId>org.shredzone.acme4j</groupId>
            <artifactId>acme4j-client</artifactId>
            <version>3.0.0</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.amqp</groupId>
            <artifactId>spring-rabbit</artifactId>
        </dependency>
        <dependency>
            <groupId>org.quartz-scheduler</groupId>
            <artifactId>quartz</artifactId>
            <version>2.3.2</version>
        </dependency>
        <!-- Add Quartz JDBC Store dependencies -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-quartz</artifactId>
        </dependency>
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
        </dependency>
        <!-- Testing -->
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <repositories>
        <repository>
            <id>spring-milestones</id>
            <name>Spring Milestones</name>
            <url>https://repo.spring.io/milestone</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <id>central</id>
            <name>Maven Central</name>
            <url>https://repo.maven.apache.org/maven2</url>
        </pluginRepository>
        <pluginRepository>
            <id>jcenter</id>
            <name>JCenter</name>
            <url>https://jcenter.bintray.com</url>
        </pluginRepository>
        <pluginRepository>
            <id>gradle</id>
            <url>https://repo.gradle.org/gradle/libs-releases-local/</url>
        </pluginRepository>
    </pluginRepositories>
    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.flywaydb</groupId>
                <artifactId>flyway-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>com.google.cloud.tools</groupId>
                <artifactId>jib-maven-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <from>
                        <image>openjdk:alpine</image>
                    </from>
                    <to>
                        <image>ghcr.io/fincity-india/worker</image>
                        <tags>
                            <tag>${env.ENVIRONMENT}</tag>
                            <tag>${project.version}</tag>
                        </tags>
                    </to>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>jooq</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.jooq</groupId>
                        <artifactId>jooq-codegen-maven</artifactId>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>generate</goal>
                                </goals>
                            </execution>
                        </executions>
                        <dependencies>
                            <dependency>
                                <groupId>mysql</groupId>
                                <artifactId>mysql-connector-java</artifactId>
                                <version>8.0.29</version>
                            </dependency>
                            <dependency>
                                <groupId>javax.xml.bind</groupId>
                                <artifactId>jaxb-api</artifactId>
                                <version>2.3.1</version>
                            </dependency>
                            <dependency>
                                <groupId>org.glassfish.jaxb</groupId>
                                <artifactId>jaxb-runtime</artifactId>
                                <version>4.0.2</version>
                            </dependency>
                        </dependencies>
                        <configuration>
                            <jdbc>
                                <driver>com.mysql.cj.jdbc.Driver</driver>
                                <url>jdbc:mysql://localhost:3306/worker</url>
                                <user>root</user>
                                <password>root</password>
                            </jdbc>
                            <generator>
                                <database>
                                    <includes>worker_.*</includes>
                                    <inputSchema>worker</inputSchema>
                                    <forcedTypes>
                                        <forcedType>
                                            <userType>java.util.Map</userType>
                                            <converter>
                                                com.fincity.saas.commons.jooq.convertor.JSONMysqlMapConvertor
                                            </converter>
                                            <includeExpression>FUNCTION_PARAMS</includeExpression>
                                            <includeTypes>JSON</includeTypes>
                                            <genericConverter>false</genericConverter>
                                        </forcedType>
                                    </forcedTypes>
                                </database>
                                <generate>
                                    <deprecated>false</deprecated>
                                    <relations>true</relations>
                                    <records>true</records>
                                    <immutablePojos>false</immutablePojos>
                                    <fluentSetters>true</fluentSetters>
                                </generate>
                                <target>
                                    <packageName>com.fincity.sass.worker.jooq</packageName>
                                    <directory>src/main/java</directory>
                                </target>
                            </generator>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>spotless</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>com.diffplug.spotless</groupId>
                        <artifactId>spotless-maven-plugin</artifactId>
                        <version>${spotless.version}</version>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>check</goal>
                                    <goal>apply</goal>
                                </goals>
                            </execution>
                        </executions>
                        <dependencies>
                            <dependency>
                                <groupId>com.diffplug.spotless</groupId>
                                <artifactId>spotless-maven-plugin</artifactId>
                                <version>${spotless.version}</version>
                            </dependency>
                            <dependency>
                                <groupId>com.palantir.javaformat</groupId>
                                <artifactId>palantir-java-format</artifactId>
                                <version>${palantir-java.format.version}</version>
                            </dependency>
                        </dependencies>
                        <configuration>
                            <!-- JAVA files -->
                            <java>
                                <palantirJavaFormat>
                                    <version>${palantir-java.format.version}</version>
                                    <style>PALANTIR</style>
                                </palantirJavaFormat>
                                <importOrder/>
                                <removeUnusedImports/>
                                <formatAnnotations/>
                                <trimTrailingWhitespace/>
                                <endWithNewline/>
                                <toggleOffOn/>
                            </java>
                            <!-- YAML files -->
                            <yaml>
                                <includes>
                                    <include>src/main/resources/*.yml</include>
                                    <include>src/main/resources/*.yaml</include>
                                </includes>
                            </yaml>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
